<resources>
    <string name="app_name">Messanger</string>
    <string name="label_chats">Chats</string>
    <!-- Strings related to login -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name (optional)</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_first_name">Not a valid first name</string>
    <string name="invalid_last_name">Not a valid last name</string>
    <string name="invalid_phone">Not a valid phone</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_not_the_same_pass">Passwords do not match</string>
    <string name="error_login">"Login failed"</string>
    <string name="error_register">"Register failed"</string>
    <string name="error_already_logged_in">Already logged in</string>
    <string name="error_not_authorized">Not authorised error</string>
    <string name="error_wrong_password">"Wrong password"</string>
    <string name="error_user_exist">"User is already exists"</string>
    <string name="error_user_does_not_exist">"User doesn't exist"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_chat_list">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sample_title">ChatKit for Android</string>

    <string name="view">View</string>

    <string name="sample_title_default">Default view</string>
    <string name="sample_subtitle_default">Dialogs and messages with default style</string>
    <string name="sample_title_attrs">Styled view</string>
    <string name="sample_subtitle_attrs">Styled components using embedded attributes</string>
    <string name="sample_title_layout">Custom layout</string>
    <string name="sample_subtitle_layout">Custom layouts to change default views position</string>
    <string name="sample_title_holder">Custom view holder</string>
    <string name="sample_subtitle_holder">Custom view holder to extend default behaviour for a new features</string>
    <string name="sample_title_custom_content">Custom content type</string>
    <string name="sample_subtitle_custom_content">Custom message content on the example of voice message</string>

    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>

    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>

</resources>